# slint-uefi-template

./: Cargo.toml  README.md  build.rs
ovmf/: README.md  sha256
ovmf/aarch64/: shell.efi
ovmf/ia32/: code.fd  shell.efi
ovmf/riscv64/: shell.efi
ovmf/x86_64/: code.fd  shell.efi
ui/: demo.slint
